<resources>
    <string name="app_name">Trình chơi nhạc</string>
    <string name="tab_text_1">Trang chủ</string>
    <string name="tab_text_2">Thể thao </string>
    <string name="tab_text_3">Báo Mỹ</string>
    <string name="tab_text_4">Báo Nhật</string>
    <string name="tab_text_5">Tab 4</string>
    <string name="tab_text_6">Tab 5</string>
    <string name="tab_text_7">Tab 6</string>
    <string name="tab_text_8">Tab 7</string>
    <string name="tab_text_9">Tab 8</string>
    <string name="tab_text_10">Tab 9</string>
    <string name="title_news_name">Tiêu đề</string>
    <string name="contact_name">Tên</string>
    <string name="contact_phone_number">Số điện thoại</string>
    <string name="contact_avatar">Avatar</string>
    <string name="contact_back">Trở lại</string>
    <string name="contact_ok">Đồng ý</string>
    <string name="contact_change">Chỉnh sửa</string>
    <string name="keyword_1">Jack</string>
    <string name="keyword_2">Covid</string>
    <string name="keyword_3">Corona</string>
    <string name="search">Tìm kiếm</string>
    <string name="contact_exit">Thoát</string>
    <string name="contact_add">Thêm</string>
    <string name="take_piture">Chụp ảnh</string>
    <string name="choose_folder">Chọn từ máy</string>
    <string name="delelte_image">Xóa ảnh</string>
    <string name="choose_language">Chọn ngôn ngữ</string>
    <string name="music">Music</string>
    <string name="image_descreption">Image Descreption</string>
    <string name="time_start">00:00:00</string>
    <string name="time_total">00:00:00</string>
    <string name="song_title">Tên bài nhạc</string>
    <string name="song_author">Ca sĩ</string>
</resources>