<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/include_bottom_nowplaying">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_song_music_playing_card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_music"
            android:contentDescription="@string/image_descreption"
            tools:ignore="ButtonStyle" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title_song_playing_card"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/song_title" />

            <TextView
                android:id="@+id/text_author_song_playing_card"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/song_author" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_play_playing_card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/image_descreption"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_next_playing_card"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_next"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_list_music_playing_card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_list"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>